Fixes in SecurityConfiguration.java to fix BE and FE interations error caused by different ports, fixed resend otp function, link changed in UserService.java to fix the activating problem (still need to fix the pop ups)